# navio-player

./: .cta.json  AGENTS.md  README.md  eslint.config.js  package-lock.json  package.json  vite.config.ts
.github/workflows/: publish.yml
docs/: mcp.md  roadmap.md
scripts/: prepare-tauri-entry.mjs
src/: routeTree.gen.ts  styles.css
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: application.rs  commands.rs  downloader.rs  lib.rs  library.rs  main.rs  media_tools.rs  server.rs  settings.rs  watcher.rs
src-tauri/src/activity/: mod.rs  models.rs  service.rs  storage.rs
src-tauri/src/control/: broker.rs  http.rs  mod.rs  models.rs  runtime.rs
src-tauri/src/downloader/: command.rs  events.rs  inspection.rs  manager.rs  mod.rs  models.rs  tools.rs  verification.rs
src-tauri/src/mcp/: client.rs  mod.rs  params.rs
src-tauri/src/media_tools/: assets.rs  cache.rs  mod.rs  models.rs  operations.rs  persistence.rs
src-tauri/src/playlists/: mod.rs  models.rs  storage.rs
src-tauri/src/server/: mod.rs  ranges.rs  startup.rs  state.rs  streaming.rs
src-tauri/src/watcher/: mod.rs  runtime.rs  synchronization.rs
src/components/: Checkbox.tsx  CreatePlaylistModal.test.tsx  CreatePlaylistModal.tsx  KeyboardShortcuts.tsx  LibraryOperationFeedback.test.tsx  LibraryOperationFeedback.tsx  NowPlayingDrawer.tsx  PlayerBar.tsx  PlaylistEditorModal.tsx  Radio.tsx  Select.tsx  SettingsActionModal.test.tsx  (+6 more)
website/: .cta.json  package-lock.json  package.json  vitest.config.ts
(+67 files in other folders)
