[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
lofty = "0.21"
mp4 = "0.14"
matroska = "0.19"
axum = { version = "0.7", features = ["tokio"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
uuid = { version = "1.7", features = ["v4"] }
regex = "1.10"
percent-encoding = "2.3"
mime_guess = "2.0"
tokio-util = { version = "0.7", features = ["io"] }
